--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -53,7 +53,7 @@
   
   
 
-  <meta name="author" content="Sizhe &#34;Lester&#34; Li" />
+  <meta name="author" content="Sizhe (Lester) Li" />
 
   
   
@@ -651,7 +651,7 @@
       <div>
         
 
-  <span >Ohad Kott</span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span class="author-highlighted" style="color:black">Sizhe &#34;Lester&#34; Li</span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span ><a href="https://sites.brown.edu/drewlinsley/">Drew Linsley</a></span>, <span >Ali Amin</span>, <span >Bora Golijanin</span>, <span >Dragan Golijanin</span>, <span ><a href="https://serre-lab.clps.brown.edu/person/thomas-serre/">Thomas Serre</a></span>
+  <span >Ohad Kott</span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span class="author-highlighted" style="color:black">Sizhe (Lester) Li</span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span ><a href="https://sites.brown.edu/drewlinsley/">Drew Linsley</a></span>, <span >Ali Amin</span>, <span >Bora Golijanin</span>, <span >Dragan Golijanin</span>, <span ><a href="https://serre-lab.clps.brown.edu/person/thomas-serre/">Thomas Serre</a></span>
       </div>
       
     </div>
