--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
         <div>
           
 
-  <span class="author-highlighted" style="color:black">Sizhe (Lester) Li</span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span ><a href="https://sites.google.com/view/zhiao-huang">Zhiao Huang</a></span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span ><a href="https://people.csail.mit.edu/taodu/">Tao Du</a></span>, <span ><a href="https://cseweb.ucsd.edu//~haosu/">Zhiao Huang</a></span>, <span ><a href="http://web.mit.edu/cocosci/josh.html">Joshua B. Tenenbaum</a></span>, <span ><a href="http://people.csail.mit.edu/ganchuang/">Chuang Gan</a></span>
+  <span class="author-highlighted" style="color:black">Sizhe (Lester) Li</span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span ><a href="https://sites.google.com/view/zhiao-huang">Zhiao Huang</a></span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span ><a href="https://people.csail.mit.edu/taodu/">Tao Du</a></span>, <span ><a href="https://cseweb.ucsd.edu//~haosu/">Hao Su</a></span>, <span ><a href="http://web.mit.edu/cocosci/josh.html">Joshua B. Tenenbaum</a></span>, <span ><a href="http://people.csail.mit.edu/ganchuang/">Chuang Gan</a></span>
         </div>
         
       </div>
