--- a/publication/index.html
+++ b/publication/index.html
@@ -688,7 +688,7 @@
   <span class="article-metadata li-cite-author">
     
 
-  <span class="author-highlighted" style="color:black">Sizhe (Lester) Li</span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span ><a href="https://sites.google.com/view/zhiao-huang">Zhiao Huang</a></span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span ><a href="https://people.csail.mit.edu/taodu/">Tao Du</a></span>, <span ><a href="https://cseweb.ucsd.edu//~haosu/">Zhiao Huang</a></span>, <span ><a href="http://web.mit.edu/cocosci/josh.html">Joshua B. Tenenbaum</a></span>, <span ><a href="http://people.csail.mit.edu/ganchuang/">Chuang Gan</a></span>
+  <span class="author-highlighted" style="color:black">Sizhe (Lester) Li</span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span ><a href="https://sites.google.com/view/zhiao-huang">Zhiao Huang</a></span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span ><a href="https://people.csail.mit.edu/taodu/">Tao Du</a></span>, <span ><a href="https://cseweb.ucsd.edu//~haosu/">Hao Su</a></span>, <span ><a href="http://web.mit.edu/cocosci/josh.html">Joshua B. Tenenbaum</a></span>, <span ><a href="http://people.csail.mit.edu/ganchuang/">Chuang Gan</a></span>
   </span>
   (2022).
   <a href="/publication/contact_points_discovery_iclr2022/">Contact Points Discovery for Soft-Body Manipulations with Differentiable Physics</a>.
