--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
     
 
     <div class="article-style">
-      <p>I am a visiting student at MIT working on robot learning under the supervision of <a href="http://people.csail.mit.edu/ganchuang/" target="_blank" rel="noopener">Chuang Gan</a>, <a href="https://people.csail.mit.edu/taodu/" target="_blank" rel="noopener">Tao Du</a>, and <a href="http://web.mit.edu/cocosci/josh.html" target="_blank" rel="noopener">Josh Tenenbaum</a>. I study how differentiable physics models can be leveraged for deformable object manipulations.</p>
+      <p>I am a visiting student at MIT working on robot learning under the supervision of <a href="http://people.csail.mit.edu/ganchuang/" target="_blank" rel="noopener">Chuang Gan</a> and <a href="http://web.mit.edu/cocosci/josh.html" target="_blank" rel="noopener">Josh Tenenbaum</a>. I study how differentiable physics models can be leveraged for deformable object manipulations.</p>
 <p>I am also a final-year undergrad in computer science at the University of Rochester. Previously, I was fortunate to work with <a href="https://www.cs.rochester.edu/~cxu22/" target="_blank" rel="noopener">Chenliang Xu</a> at the Univesity of Rochester on audio-visual learning, and with <a href="https://serre-lab.clps.brown.edu/person/thomas-serre/" target="_blank" rel="noopener">Thomas Serre</a> at Brown University on cancer detection.</p>
 
     </div>
