--- a/teaching/deep_learning_fall_2021/index.html
+++ b/teaching/deep_learning_fall_2021/index.html
@@ -248,7 +248,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.246129d782c938a644fe2d653d8a976f.css" />
+  <link rel="stylesheet" href="/css/wowchemy.fdeb09e237052632e0ec72f95561ab57.css" />
 
   
 
@@ -851,7 +851,7 @@ Further event details, including [page elements](https://wowchemy.com/docs/writi
     <div class="media-body">
       <h5 class="card-title"><a href="https://example.com/">Sizhe (Lester) Li</a></h5>
       <h6 class="card-subtitle">李思哲</h6>
-      <p class="card-text">I study how differentiable physics models can be leveraged for deformable object manipulations.</p>
+      <p class="card-text">I study deformable object manipulation from the perspectives of learning, robotics, and graphics.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
