--- a/index.html
+++ b/index.html
@@ -788,6 +788,7 @@
     <div class="article-style">
       <p>I am a visiting student at MIT working on robot learning under the supervision of <a href="http://people.csail.mit.edu/ganchuang/" target="_blank" rel="noopener">Chuang Gan</a> and <a href="http://web.mit.edu/cocosci/josh.html" target="_blank" rel="noopener">Josh Tenenbaum</a>. I study deformable object manipulation through robot learning and computer graphics.</p>
 <p>I am also a final-year undergrad in computer science at the University of Rochester. Previously, I was fortunate to work with <a href="https://www.cs.rochester.edu/~cxu22/" target="_blank" rel="noopener">Chenliang Xu</a> at the Univesity of Rochester on audio-visual learning, and with <a href="https://serre-lab.clps.brown.edu/person/thomas-serre/" target="_blank" rel="noopener">Thomas Serre</a> at Brown University on cancer detection.</p>
+<p>Email: sli96 [at] u.rochester.edu, sizheli [at] mit.edu</p>
 
     </div>
 
