--- a/publication/lung_cancer_detection_nips2020/index.html
+++ b/publication/lung_cancer_detection_nips2020/index.html
@@ -236,7 +236,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.7239ddf1fce233b2dde7b2c275b4f96b.css" />
+  <link rel="stylesheet" href="/css/wowchemy.55803f012d9a73da32e7cd49a9fd5d3c.css" />
 
   
 
@@ -702,7 +702,7 @@
   <div>
     
 
-  <span >Sahar Shahamatdar</span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span >Daryoush Saeed-Vafa</span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span >Drew Linsley</span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span class="author-highlighted" style="color:black">Sizhe (Lester) Li</span>, <span >Sohini Ramachandran</span>, <span ><a href="https://serre-lab.clps.brown.edu/person/thomas-serre/">Thomas Serre</a></span>
+  <span >Sahar Shahamatdar</span><span >*</span>, <span >Daryoush Saeed-Vafa</span><span >*</span>, <span >Drew Linsley</span><span >*</span>, <span class="author-highlighted" style="color:black">Sizhe (Lester) Li</span>, <span >Sohini Ramachandran</span>, <span ><a href="https://serre-lab.clps.brown.edu/person/thomas-serre/">Thomas Serre</a></span>
   </div>
   
   
