--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -236,7 +236,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.7239ddf1fce233b2dde7b2c275b4f96b.css" />
+  <link rel="stylesheet" href="/css/wowchemy.55803f012d9a73da32e7cd49a9fd5d3c.css" />
 
   
 
@@ -677,7 +677,7 @@
       <div>
         
 
-  <span >Ohad Kott</span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span class="author-highlighted" style="color:black">Sizhe (Lester) Li</span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span ><a href="https://sites.brown.edu/drewlinsley/">Drew Linsley</a></span>, <span >Ali Amin</span>, <span >Bora Golijanin</span>, <span >Dragan Golijanin</span>, <span ><a href="https://serre-lab.clps.brown.edu/person/thomas-serre/">Thomas Serre</a></span>
+  <span >Ohad Kott</span><span >*</span>, <span class="author-highlighted" style="color:black">Sizhe (Lester) Li</span><span class="author-highlighted" style="color:black">*</span>, <span ><a href="https://sites.brown.edu/drewlinsley/">Drew Linsley</a></span>, <span >Ali Amin</span>, <span >Bora Golijanin</span>, <span >Dragan Golijanin</span>, <span ><a href="https://serre-lab.clps.brown.edu/person/thomas-serre/">Thomas Serre</a></span>
       </div>
       
     </div>
