--- a/publication/contact_points_discovery_iclr2022/index.html
+++ b/publication/contact_points_discovery_iclr2022/index.html
@@ -236,7 +236,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.7239ddf1fce233b2dde7b2c275b4f96b.css" />
+  <link rel="stylesheet" href="/css/wowchemy.55803f012d9a73da32e7cd49a9fd5d3c.css" />
 
   
 
@@ -702,7 +702,7 @@
   <div>
     
 
-  <span class="author-highlighted" style="color:black">Sizhe (Lester) Li</span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span ><a href="https://sites.google.com/view/zhiao-huang">Zhiao Huang</a></span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span ><a href="https://people.csail.mit.edu/taodu/">Tao Du</a></span>, <span ><a href="https://cseweb.ucsd.edu//~haosu/">Hao Su</a></span>, <span ><a href="http://web.mit.edu/cocosci/josh.html">Joshua B. Tenenbaum</a></span>, <span ><a href="http://people.csail.mit.edu/ganchuang/">Chuang Gan</a></span>
+  <span class="author-highlighted" style="color:black">Sizhe (Lester) Li</span><span class="author-highlighted" style="color:black">*</span>, <span ><a href="https://sites.google.com/view/zhiao-huang">Zhiao Huang</a></span><span >*</span>, <span ><a href="https://people.csail.mit.edu/taodu/">Tao Du</a></span>, <span ><a href="https://cseweb.ucsd.edu//~haosu/">Hao Su</a></span>, <span ><a href="http://web.mit.edu/cocosci/josh.html">Joshua B. Tenenbaum</a></span>, <span ><a href="http://people.csail.mit.edu/ganchuang/">Chuang Gan</a></span>
   </div>
   
   
