--- a/publication/space_time_memory_bmvc2021/index.html
+++ b/publication/space_time_memory_bmvc2021/index.html
@@ -236,7 +236,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.7239ddf1fce233b2dde7b2c275b4f96b.css" />
+  <link rel="stylesheet" href="/css/wowchemy.55803f012d9a73da32e7cd49a9fd5d3c.css" />
 
   
 
@@ -702,7 +702,7 @@
   <div>
     
 
-  <span class="author-highlighted" style="color:black">Sizhe (Lester) Li</span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span ><a href="https://yapengtian.org/">Yapeng Tian</a></span><i class="author-notes fas fa-asterisk" data-toggle="tooltip" title="Equal contribution"></i>, <span ><a href="https://www.cs.rochester.edu/~cxu22/">Chenliang Xu</a></span>
+  <span class="author-highlighted" style="color:black">Sizhe (Lester) Li</span><span class="author-highlighted" style="color:black">*</span>, <span ><a href="https://yapengtian.org/">Yapeng Tian</a></span><span >*</span>, <span ><a href="https://www.cs.rochester.edu/~cxu22/">Chenliang Xu</a></span>
   </div>
   
   
