--- a/teaching/computer_vision_spring_2020/index.html
+++ b/teaching/computer_vision_spring_2020/index.html
@@ -248,7 +248,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.55803f012d9a73da32e7cd49a9fd5d3c.css" />
+  <link rel="stylesheet" href="/css/wowchemy.c0e6b2afe33c14f80e5a6a7420f8a9e2.css" />
 
   
 
@@ -877,7 +877,7 @@ Further event details, including [page elements](https://wowchemy.com/docs/writi
     <div class="media-body">
       <h5 class="card-title"><a href="https://example.com/">Sizhe (Lester) Li</a></h5>
       <h6 class="card-subtitle">李思哲</h6>
-      <p class="card-text">I study deformable object manipulation from the perspectives of learning, robotics, and graphics.</p>
+      <p class="card-text">My research interests span robot learning, vision, and physics simulation. Currently, I develop methods for robots to learn to interact with deformable objects with challenging dynamics.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
