--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.55803f012d9a73da32e7cd49a9fd5d3c.css" />
+  <link rel="stylesheet" href="/css/wowchemy.c0e6b2afe33c14f80e5a6a7420f8a9e2.css" />
 
   
 
@@ -830,6 +830,7 @@
     <div class="article-style">
       <p>I am a visiting student at MIT working on robot learning, hosted by <a href="http://people.csail.mit.edu/ganchuang/" target="_blank" rel="noopener">Chuang Gan</a> and <a href="http://web.mit.edu/cocosci/josh.html" target="_blank" rel="noopener">Josh Tenenbaum</a>.</p>
 <p>I am also a final-year undergraduate in computer science at the University of Rochester, where I was fortunate to be advised by <a href="https://www.cs.rochester.edu/~cxu22/" target="_blank" rel="noopener">Chenliang Xu</a> on audio-visual learning. Previously, I was fortunate to work with <a href="https://serre-lab.clps.brown.edu/person/thomas-serre/" target="_blank" rel="noopener">Thomas Serre</a> on cancer detection, starting as a high school researcher at Brown University.</p>
+<p>My research interests span robot learning, computer vision, and physics simulation. Currently, I develop methods for robots to learn to interact with deformable objects with challenging dynamics.</p>
 <hr>
 <p><strong>Email</strong>: <a href="mailto:sli96@u.rochester.edu">sli96@u.rochester.edu</a>, <a href="mailto:sizheli@mit.edu">sizheli@mit.edu</a></p>
 
