--- a/publication/contact_points_discovery_iclr2022/index.html
+++ b/publication/contact_points_discovery_iclr2022/index.html
@@ -773,11 +773,16 @@
 
 
 
+<a href="#" class="btn btn-outline-primary btn-page-header js-cite-modal"
+        data-filename="/publication/contact_points_discovery_iclr2022/cite.bib">
+  Cite
+</a>
 
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://sites.google.com/view/cpdeformiclr2022" target="_blank" rel="noopener">
+
+<a class="btn btn-outline-primary btn-page-header" href="https://lester0866.github.io/publication/contact_points_discovery_iclr2022/" target="_blank" rel="noopener">
   Project
 </a>
 
@@ -847,7 +852,29 @@
 
     <div class="space-below"></div>
 
-    <div class="article-style"><h3 id="airplane">Airplane</h3>
+    <div class="article-style"><h3 id="dataset-illustration">Dataset Illustration</h3>
+<p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<figure  >
+  <div class="d-flex justify-content-center">
+    <div class="w-100" ><img src="./dataset.png" alt="Dataset Image" loading="lazy" data-zoomable /></div>
+  </div></figure>
+</p>
+<h3 id="airplane">Airplane</h3>
 <!-- 
 <div class="25:10">
   <iframe src="https://www.youtube.com/embed/cOUtDK2SfJE" allowfullscreen title="YouTube Video"></iframe>
@@ -928,21 +955,13 @@
   </div></figure></code></p>
 <h3 id="code-release">Code Release</h3>
 <p>Upcoming, please stay tuned!</p>
-<!-- <div class="alert alert-note">
-  <div>
-    Click the <em>Cite</em> button above to demo the feature to enable visitors to import publication metadata into their reference management software.
-  </div>
-</div>
-
-
-<div class="alert alert-note">
-  <div>
-    Create your slides in Markdown - click the <em>Slides</em> button to check out the example.
-  </div>
-</div>
-
-
-Supplementary notes can be added here, including [code, math, and images](https://wowchemy.com/docs/writing-markdown-latex/). -->
+<h3 id="citation">Citation</h3>
+<pre><code>@InProceedings{li2022contact,
+author = {Li, Sizhe and Huang, Zhiao and Du, Tao and Su, Hao and Tenenbaum, Joshua and Gan, Chuang},
+title = {{C}ontact {P}oints {D}iscovery for {S}oft-{B}ody {M}anipulations with {D}ifferentiable {P}hysics},
+booktitle = {International Conference on Learning Representations (ICLR)},
+year = {2022}}
+</code></pre>
 </div>
 
     
