--- a/publication/index.html
+++ b/publication/index.html
@@ -754,11 +754,16 @@
 
 
 
+<a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+        data-filename="/publication/contact_points_discovery_iclr2022/cite.bib">
+  Cite
+</a>
 
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://sites.google.com/view/cpdeformiclr2022" target="_blank" rel="noopener">
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://lester0866.github.io/publication/contact_points_discovery_iclr2022/" target="_blank" rel="noopener">
   Project
 </a>
 
@@ -825,11 +830,24 @@
 
 
 
+<a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
+        data-filename="/publication/space_time_memory_bmvc2021/cite.bib">
+  Cite
+</a>
+
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/lester0866/Space-Time-Memory-Network-for-Sounding-Object-Localization-in-Videos" target="_blank" rel="noopener">
+  Code
+</a>
 
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://sites.google.com/view/bmvc2021stm" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://lester0866.github.io/publication/space_time_memory_bmvc2021/" target="_blank" rel="noopener">
   Project
 </a>
 
