--- a/publication/space_time_memory_bmvc2021/index.html
+++ b/publication/space_time_memory_bmvc2021/index.html
@@ -772,11 +772,24 @@
 
 
 
+<a href="#" class="btn btn-outline-primary btn-page-header js-cite-modal"
+        data-filename="/publication/space_time_memory_bmvc2021/cite.bib">
+  Cite
+</a>
+
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header" href="https://github.com/lester0866/Space-Time-Memory-Network-for-Sounding-Object-Localization-in-Videos" target="_blank" rel="noopener">
+  Code
+</a>
 
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://sites.google.com/view/bmvc2021stm" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://lester0866.github.io/publication/space_time_memory_bmvc2021/" target="_blank" rel="noopener">
   Project
 </a>
 
@@ -846,7 +859,24 @@
 
     <div class="space-below"></div>
 
-    <div class="article-style"><!-- <div class="alert alert-note">
+    <div class="article-style"><h3 id="citation">Citation</h3>
+<pre><code>@article{DBLP:journals/corr/abs-2111-05526,
+  author    = {Sizhe Li and
+               Yapeng Tian and
+               Chenliang Xu},
+  title     = {Space-Time Memory Network for Sounding Object Localization in Videos},
+  journal   = {CoRR},
+  volume    = {abs/2111.05526},
+  year      = {2021},
+  url       = {https://arxiv.org/abs/2111.05526},
+  eprinttype = {arXiv},
+  eprint    = {2111.05526},
+  timestamp = {Tue, 16 Nov 2021 12:12:31 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2111-05526.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+</code></pre>
+<!-- <div class="alert alert-note">
   <div>
     Click the <em>Cite</em> button above to demo the feature to enable visitors to import publication metadata into their reference management software.
   </div>
