--- a/privacy/index.html
+++ b/privacy/index.html
@@ -63,7 +63,7 @@
   <meta name="description" content="Add your privacy policy here and set draft: false to publish it. Otherwise, delete this file if you don&rsquo;t need it." />
 
   
-  <link rel="alternate" hreflang="en-us" href="https://example.com/privacy/" />
+  <link rel="alternate" hreflang="en-us" href="https://lester0866.github.io/privacy/" />
 
   
   
@@ -315,7 +315,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hu81880007a45834b4534c24f3c4afa9ff_5775_32x32_fill_lanczos_center_3.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu81880007a45834b4534c24f3c4afa9ff_5775_180x180_fill_lanczos_center_3.png" />
 
-  <link rel="canonical" href="https://example.com/privacy/" />
+  <link rel="canonical" href="https://lester0866.github.io/privacy/" />
 
   
   
@@ -338,10 +338,10 @@
   <meta property="twitter:card" content="summary" />
   
   <meta property="og:site_name" content="Sizhe Li" />
-  <meta property="og:url" content="https://example.com/privacy/" />
+  <meta property="og:url" content="https://lester0866.github.io/privacy/" />
   <meta property="og:title" content="Privacy Policy | Sizhe Li" />
-  <meta property="og:description" content="Add your privacy policy here and set draft: false to publish it. Otherwise, delete this file if you don&rsquo;t need it." /><meta property="og:image" content="https://example.com/media/icon_hu81880007a45834b4534c24f3c4afa9ff_5775_512x512_fill_lanczos_center_3.png" />
-    <meta property="twitter:image" content="https://example.com/media/icon_hu81880007a45834b4534c24f3c4afa9ff_5775_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="Add your privacy policy here and set draft: false to publish it. Otherwise, delete this file if you don&rsquo;t need it." /><meta property="og:image" content="https://lester0866.github.io/media/icon_hu81880007a45834b4534c24f3c4afa9ff_5775_512x512_fill_lanczos_center_3.png" />
+    <meta property="twitter:image" content="https://lester0866.github.io/media/icon_hu81880007a45834b4534c24f3c4afa9ff_5775_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
       <meta
