--- a/publication/index.html
+++ b/publication/index.html
@@ -760,6 +760,14 @@
 </a>
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/lester0866/CPDeform/tree/main/CPDeform" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
