--- a/publication/index.html
+++ b/publication/index.html
@@ -764,7 +764,7 @@
   
     
   
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/lester0866/CPDeform/tree/main/CPDeform" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/lester0866/CPDeform" target="_blank" rel="noopener">
   Code
 </a>
 
