--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@
   
     
   
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/lester0866/CPDeform/tree/main/CPDeform" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/lester0866/CPDeform" target="_blank" rel="noopener">
   Code
 </a>
 
