--- a/publication/contact_points_discovery_iclr2022/index.html
+++ b/publication/contact_points_discovery_iclr2022/index.html
@@ -801,7 +801,7 @@
   
     
   
-<a class="btn btn-outline-primary btn-page-header" href="https://github.com/lester0866/CPDeform/tree/main/CPDeform" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://github.com/lester0866/CPDeform" target="_blank" rel="noopener">
   Code
 </a>
 
