--- a/publication/contact_points_discovery_iclr2022/index.html
+++ b/publication/contact_points_discovery_iclr2022/index.html
@@ -994,7 +994,7 @@
     <div class="w-100" ><img src="./rope&#43;&#43;_demo.gif" alt="" loading="lazy" data-zoomable /></div>
   </div></figure></code></p>
 <h3 id="code-release">Code Release</h3>
-<p>Please check out our GitHub repository <a href="https://github.com/lester0866/CPDeform" target="_blank" rel="noopener">CPdeform</a>.</p>
+<p>Please check out our GitHub repository <a href="https://github.com/lester0866/CPDeform" target="_blank" rel="noopener">CPDeform</a>.</p>
 <h3 id="citation">Citation</h3>
 <pre><code>@InProceedings{li2022contact,
 author = {Li, Sizhe and Huang, Zhiao and Du, Tao and Su, Hao and Tenenbaum, Joshua and Gan, Chuang},
