--- a/publication/contact_points_discovery_iclr2022/index.html
+++ b/publication/contact_points_discovery_iclr2022/index.html
@@ -808,7 +808,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://lester0866.github.io/publication/contact_points_discovery_iclr2022/" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="http://cpdeform.csail.mit.edu/" target="_blank" rel="noopener">
   Project
 </a>
 
