--- a/publication/index.html
+++ b/publication/index.html
@@ -771,7 +771,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://lester0866.github.io/publication/contact_points_discovery_iclr2022/" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="http://cpdeform.csail.mit.edu/" target="_blank" rel="noopener">
   Project
 </a>
 
