--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -53,7 +53,7 @@
   
   
 
-  <meta name="author" content="Sizhe (Lester) Li" />
+  <meta name="author" content="Sizhe Lester Li" />
 
   
   
@@ -690,7 +690,7 @@
       <div>
         
 
-  <span >Ohad Kott</span><span >*</span>, <span class="author-highlighted" style="color:black">Sizhe (Lester) Li</span><span class="author-highlighted" style="color:black">*</span>, <span ><a href="https://sites.brown.edu/drewlinsley/">Drew Linsley</a></span>, <span >Ali Amin</span>, <span >Bora Golijanin</span>, <span >Dragan Golijanin</span>, <span ><a href="https://serre-lab.clps.brown.edu/person/thomas-serre/">Thomas Serre</a></span>
+  <span >Ohad Kott</span><span >*</span>, <span class="author-highlighted" style="color:black">Sizhe Lester Li</span><span class="author-highlighted" style="color:black">*</span>, <span ><a href="https://sites.brown.edu/drewlinsley/">Drew Linsley</a></span>, <span >Ali Amin</span>, <span >Bora Golijanin</span>, <span >Dragan Golijanin</span>, <span ><a href="https://serre-lab.clps.brown.edu/person/thomas-serre/">Thomas Serre</a></span>
       </div>
       
     </div>
