--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
       
       <img class="avatar avatar-square"
            width="270" height="270"
-           src="/authors/admin/avatar_hub5d96b3f4f57cec52fcd642fc9ea3884_391438_270x270_fill_q75_lanczos_center.jpg" alt="Sizhe Lester Li">
+           src="/authors/admin/avatar_hu4c91b0ac5c6bdefcd4d474112b2b9bd8_9464406_270x270_fill_lanczos_center_3.png" alt="Sizhe Lester Li">
       
 
       <div class="portrait-title">
