--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course"><strong>Massachusetts Institute of Technology</strong> <span class="course" style="float:right">2021 - Present </span></p>
+              <p class="course"><strong>Massachusetts Institute of Technology</strong> <span class="course" style="float:right">Jan. 2021 - Dec. 2022 </span></p>
               <p style="font-size:80%;">Undergraduate Visiting Student</p>
             </div>
           </li>
@@ -869,7 +869,7 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course"><strong>University of Rochester</strong> <span class="course" style="float:right">2018 - Dec. 2022 (Exp.) </span></p>
+              <p class="course"><strong>University of Rochester</strong> <span class="course" style="float:right">Sep. 2018 - Dec. 2022 </span></p>
               <p style="font-size:80%;">B.S. in Computer Science</p>
             </div>
           </li>
