--- a/publication/lung_cancer_detection_nips2020/index.html
+++ b/publication/lung_cancer_detection_nips2020/index.html
@@ -935,7 +935,7 @@ Supplementary notes can be added here, including [code, math, and images](https:
     <div class="media-body">
       <h5 class="card-title"><a href="https://lester0866.github.io/">Sizhe Lester Li</a></h5>
       <h6 class="card-subtitle">李思哲</h6>
-      <p class="card-text">My research interests span robot learning, vision, and physics simulation. Currently, I develop methods for robots to learn to interact with deformable objects with challenging dynamics.</p>
+      <p class="card-text">I am broadly interested in robot learning, computer vision, and (differentiable) physics simulation. The goal of my research is to allow autonomous agents to learn to acquire physics-informed representation of our world through interactions. To this end, I currently develop methods for robots to learn to interact with deformable objects such as plasticine and cloth.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
