--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
 <p>I am broadly interested in robot learning, computer vision, and (differentiable) physics simulation. The goal of my research is to allow autonomous agents to learn to acquire physics-informed representation of our world through interactions. To this end, I currently develop methods for robots to learn to interact with deformable objects, such as plasticine and cloth, with challenging physical dynamics.</p>
 <hr>
 <p><strong>Email</strong>: <a href="mailto:sli96@u.rochester.edu">sli96@u.rochester.edu</a>, <a href="mailto:sizheli@mit.edu">sizheli@mit.edu</a></p>
-<p><strong>News</strong>: [10/17] Excited to be one of the four students nominated by the University of Rochester for CRA Outstanding Undergraduate Researcher Awards in North America!</p>
+<p><strong>News</strong>: [12/15] Selected as Finalist for Outstanding Undergraduate Researcher Award 2023 in North America by Computing Research Association!</p>
 
     </div>
 
