--- a/index.html
+++ b/index.html
@@ -831,6 +831,7 @@
       <p>I am a visiting student at MIT working on robot learning, hosted by <a href="http://people.csail.mit.edu/ganchuang/" target="_blank" rel="noopener">Chuang Gan</a> and <a href="http://web.mit.edu/cocosci/josh.html" target="_blank" rel="noopener">Josh Tenenbaum</a>.</p>
 <p>I completed my B.S. in Computer Science with highest honors in research at the University of Rochester, where I worked with <a href="https://www.cs.rochester.edu/~cxu22/" target="_blank" rel="noopener">Chenliang Xu</a>.
 Initially, I was fortunate to work with <a href="https://serre-lab.clps.brown.edu/person/thomas-serre/" target="_blank" rel="noopener">Thomas Serre</a> on cancer detection, starting as a high school researcher at Brown University.</p>
+<p>I was selected as a Finalist for Outstanding Undergraduate Researcher Award 2023 in North America by Computing Research Association.</p>
 <p>I am broadly interested in robotics, computer vision, and machine learning. The goal of my research is to equip machines with physical knowledge that replicates the rapid physical inferences performed by humans. To this end, I have been developing predictive models that learn from and for physical interactions. In the past two years, I have focused on enabling robots to learn to interact with deformable objects, such as plasticine and cloth, with challenging physical dynamics.</p>
 <hr>
 <p><strong>Email</strong>: <a href="mailto:sli96@u.rochester.edu">sli96@u.rochester.edu</a>, <a href="mailto:sizheli@mit.edu">sizheli@mit.edu</a></p>
@@ -850,16 +851,16 @@ Initially, I was fortunate to work with <a href="https://serre-lab.clps.brown.ed
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course"><strong>Massachusetts Institute of Technology</strong> <span class="course" style="float:right">Jan. 2021 - Dec. 2022 </span></p>
-              <p style="font-size:80%;">Undergraduate Visiting Student</p>
+              <p class="course"><strong>University of Rochester</strong> <span class="course" style="float:right">Sep. 2018 - Dec. 2022 </span></p>
+              <p style="font-size:80%;">B.S. in Computer Science; Highest Honors in Research</p>
             </div>
           </li>
           
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course"><strong>University of Rochester</strong> <span class="course" style="float:right">Sep. 2018 - Dec. 2022 </span></p>
-              <p style="font-size:80%;">B.S. in Computer Science</p>
+              <p class="course"><strong>Massachusetts Institute of Technology</strong> <span class="course" style="float:right">Jan. 2021 - Dec. 2022 </span></p>
+              <p style="font-size:80%;">Undergraduate Visiting Student</p>
             </div>
           </li>
           
