--- a/index.html
+++ b/index.html
@@ -831,11 +831,11 @@
       <p>I am a visiting student at MIT working on robot learning, hosted by <a href="http://people.csail.mit.edu/ganchuang/" target="_blank" rel="noopener">Chuang Gan</a> and <a href="http://web.mit.edu/cocosci/josh.html" target="_blank" rel="noopener">Josh Tenenbaum</a>.</p>
 <p>I recently completed my B.S. in Computer Science with highest honors in research at the University of Rochester, where I worked with <a href="https://www.cs.rochester.edu/~cxu22/" target="_blank" rel="noopener">Chenliang Xu</a>.
 Initially, I was fortunate to work with <a href="https://serre-lab.clps.brown.edu/person/thomas-serre/" target="_blank" rel="noopener">Thomas Serre</a> on cancer detection, starting as a high school researcher at Brown University.</p>
-<p>I was selected as a Finalist for Outstanding Undergraduate Researcher Award 2023 in North America by Computing Research Association.</p>
+<p>I was selected as a <a href="https://cra.org/2023-outstanding-undergraduate-researcher-award-recipients/" target="_blank" rel="noopener">Finalist for Outstanding Undergraduate Researcher Award 2023</a> in North America by Computing Research Association.</p>
 <p>I am broadly interested in robotics, computer vision, and machine learning. The goal of my research is to equip machines with physical knowledge that replicates the rapid physical inferences performed by humans. To this end, I have been developing predictive models that learn from and for physical interactions. In the past two years, I have focused on enabling robots to learn to interact with deformable objects, such as plasticine and cloth, with challenging physical dynamics.</p>
 <hr>
 <p><strong>Email</strong>: <a href="mailto:sli96@u.rochester.edu">sli96@u.rochester.edu</a>, <a href="mailto:sizheli@mit.edu">sizheli@mit.edu</a></p>
-<p><strong>News</strong>: [12/15] Selected as Finalist for Outstanding Undergraduate Researcher Award 2023 in North America by Computing Research Association!</p>
+<p><strong>News</strong>: [12/15] Selected as <a href="https://cra.org/2023-outstanding-undergraduate-researcher-award-recipients/" target="_blank" rel="noopener">Finalist for Outstanding Undergraduate Researcher Award 2023</a> in North America by Computing Research Association!</p>
 
     </div>
 
