--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
     
 
     <div class="article-style">
-      <p>I am a visiting researcher at MIT working on neural scene representations for robotics with <a href="https://www.vincentsitzmann.com/" target="_blank" rel="noopener">Vincent Sitzmann</a>. Previously, I was a visiting student at MIT hosted by <a href="http://people.csail.mit.edu/ganchuang/" target="_blank" rel="noopener">Chuang Gan</a> and <a href="http://web.mit.edu/cocosci/josh.html" target="_blank" rel="noopener">Josh Tenenbaum</a>.</p>
+      <p>I am a visiting researcher at MIT working on neural scene representations for robotics with <a href="https://www.vincentsitzmann.com/" target="_blank" rel="noopener">Vincent Sitzmann</a>. Prior to this, I was a visiting student at MIT hosted by <a href="http://people.csail.mit.edu/ganchuang/" target="_blank" rel="noopener">Chuang Gan</a> and <a href="http://web.mit.edu/cocosci/josh.html" target="_blank" rel="noopener">Josh Tenenbaum</a>.</p>
 <p>I recently completed my B.S. in Computer Science with highest honors in research at the University of Rochester, where I worked with <a href="https://www.cs.rochester.edu/~cxu22/" target="_blank" rel="noopener">Chenliang Xu</a>.
 Initially, I was fortunate to work with <a href="https://serre-lab.clps.brown.edu/person/thomas-serre/" target="_blank" rel="noopener">Thomas Serre</a> on cancer detection, starting as a high school researcher at Brown University.</p>
 <p>I was selected as a <a href="https://cra.org/2023-outstanding-undergraduate-researcher-award-recipients/" target="_blank" rel="noopener">Finalist for Outstanding Undergraduate Researcher Award 2023</a> in North America by Computing Research Association.</p>
