--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,7 @@ Initially, I was fortunate to work with <a href="https://serre-lab.clps.brown.ed
       </div>
 
       <div class="article-style">
-        Preprint, 2022 (Under Review)
+        ICLR, 2023
       </div>
 
       
