--- a/publication/index.html
+++ b/publication/index.html
@@ -734,7 +734,7 @@
   </span>
   (2022).
   <a href="/publication/dexdeform/">DexDeform: Dexterous Deformable Object Manipulation with Human Demonstrations and Differentiable Physics</a>.
-  Preprint, 2022 (Under Review).
+  ICLR, 2023.
   
   <p>
 
