--- a/publication/dexdeform/index.html
+++ b/publication/dexdeform/index.html
@@ -858,7 +858,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">Preprint, 2022 (Under Review)</div>
+          <div class="col-12 col-md-9">ICLR, 2023</div>
         </div>
       </div>
       <div class="col-md-1"></div>
