--- a/publication/dexdeform/index.html
+++ b/publication/dexdeform/index.html
@@ -60,7 +60,7 @@
   
     
   
-  <meta name="description" content="We perform the first investigation on learning dexterous manipulation of deformable objects using multi-fingered hands." />
+  <meta name="description" content="We perform an initial investigation on learning dexterous manipulation of deformable objects using multi-fingered hands." />
 
   
   <link rel="alternate" hreflang="en-us" href="https://lester0866.github.io/publication/dexdeform/" />
@@ -339,7 +339,7 @@
   <meta property="og:site_name" content="Sizhe Li" />
   <meta property="og:url" content="https://lester0866.github.io/publication/dexdeform/" />
   <meta property="og:title" content="DexDeform: Dexterous Deformable Object Manipulation with Human Demonstrations and Differentiable Physics | Sizhe Li" />
-  <meta property="og:description" content="We perform the first investigation on learning dexterous manipulation of deformable objects using multi-fingered hands." /><meta property="og:image" content="https://lester0866.github.io/publication/dexdeform/featured.png" />
+  <meta property="og:description" content="We perform an initial investigation on learning dexterous manipulation of deformable objects using multi-fingered hands." /><meta property="og:image" content="https://lester0866.github.io/publication/dexdeform/featured.png" />
     <meta property="twitter:image" content="https://lester0866.github.io/publication/dexdeform/featured.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -394,7 +394,7 @@
       "url": "https://lester0866.github.io/media/icon_hu81880007a45834b4534c24f3c4afa9ff_5775_192x192_fill_lanczos_center_3.png"
     }
   },
-  "description": "We perform the first investigation on learning dexterous manipulation of deformable objects using multi-fingered hands."
+  "description": "We perform an initial investigation on learning dexterous manipulation of deformable objects using multi-fingered hands."
 }
 </script>
 
