--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@
       
       <a href="/publication/dexdeform/"  class="summary-link">
         <div class="article-style">
-          <sup>We perform the first investigation on learning dexterous manipulation of deformable objects using multi-fingered hands.</sup> 
+          <sup>We perform an initial investigation on learning dexterous manipulation of deformable objects using multi-fingered hands.</sup> 
         </div>
       </a>
       
