--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -677,7 +677,7 @@
     
     <a href="/publication/dexdeform/"  class="summary-link">
       <div class="article-style">
-        We perform the first investigation on learning dexterous manipulation of deformable objects using multi-fingered hands.
+        We perform an initial investigation on learning dexterous manipulation of deformable objects using multi-fingered hands.
       </div>
     </a>
     
