--- a/terms/index.html
+++ b/terms/index.html
@@ -64,7 +64,7 @@
   <meta name="description" content="Add your terms here and set draft: false to publish it. Otherwise, delete this file if you don&rsquo;t need it." />
 
   
-  <link rel="alternate" hreflang="en-us" href="https://lester0866.github.io/terms/" />
+  <link rel="alternate" hreflang="en-us" href="https://sizhe-li.github.io/terms/" />
 
   
   
@@ -316,7 +316,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hu81880007a45834b4534c24f3c4afa9ff_5775_32x32_fill_lanczos_center_3.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu81880007a45834b4534c24f3c4afa9ff_5775_180x180_fill_lanczos_center_3.png" />
 
-  <link rel="canonical" href="https://lester0866.github.io/terms/" />
+  <link rel="canonical" href="https://sizhe-li.github.io/terms/" />
 
   
   
@@ -339,10 +339,10 @@
   <meta property="twitter:card" content="summary" />
   
   <meta property="og:site_name" content="Sizhe Li" />
-  <meta property="og:url" content="https://lester0866.github.io/terms/" />
+  <meta property="og:url" content="https://sizhe-li.github.io/terms/" />
   <meta property="og:title" content="Terms | Sizhe Li" />
-  <meta property="og:description" content="Add your terms here and set draft: false to publish it. Otherwise, delete this file if you don&rsquo;t need it." /><meta property="og:image" content="https://lester0866.github.io/media/icon_hu81880007a45834b4534c24f3c4afa9ff_5775_512x512_fill_lanczos_center_3.png" />
-    <meta property="twitter:image" content="https://lester0866.github.io/media/icon_hu81880007a45834b4534c24f3c4afa9ff_5775_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="Add your terms here and set draft: false to publish it. Otherwise, delete this file if you don&rsquo;t need it." /><meta property="og:image" content="https://sizhe-li.github.io/media/icon_hu81880007a45834b4534c24f3c4afa9ff_5775_512x512_fill_lanczos_center_3.png" />
+    <meta property="twitter:image" content="https://sizhe-li.github.io/media/icon_hu81880007a45834b4534c24f3c4afa9ff_5775_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
       <meta
