--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
 
         
         <h3>
-          <a href="csail.mit.edu" target="_blank" rel="noopener">
+          <a href="http://csail.mit.edu" target="_blank" rel="noopener">
           <span>MIT CSAIL</span>
           </a>
         </h3>
