--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
     
 
     <div class="article-style">
-      <p>I am a student researcher at MIT working with <a href="https://www.vincentsitzmann.com/" target="_blank" rel="noopener">Vincent Sitzmann</a>.</p>
+      <p>I am an incoming PhD student at <a href="http://csail.mit.edu/" target="_blank" rel="noopener">MIT CSAIL</a>. I am fortunate to receive the <a href="https://oge.mit.edu/fellowships/presidential-graduate-fellowship-program/" target="_blank" rel="noopener">MIT Presidential Fellowship</a>.</p>
 <p>I recently completed my B.S. in Computer Science with the highest honors in research at the University of Rochester. During my undergrad, I was a visiting student at MIT hosted by <a href="http://web.mit.edu/cocosci/josh.html" target="_blank" rel="noopener">Josh Tenenbaum</a>, working closely with <a href="http://people.csail.mit.edu/ganchuang/" target="_blank" rel="noopener">Chuang Gan</a>.</p>
 <p>I am interested in building inverse models that learn to caputure the rich and <em>structured representation</em> of our world from <em>unstructured observation</em>, through physical interactions of embodied agents. To this end, my research draws ideas from robotics, vision, graphics, and computational cognitive science.</p>
 <hr>
