--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
           
         
         <li>
-          <a href="https://twitter.com/_lesterli" target="_blank" rel="noopener" aria-label="twitter">
+          <a href="https://twitter.com/sizhe_lester_li" target="_blank" rel="noopener" aria-label="twitter">
             <i class="fab fa-twitter big-icon"></i>
           </a>
         </li>
@@ -831,7 +831,7 @@
     <div class="article-style">
       <p>I am an incoming PhD student at <a href="http://csail.mit.edu/" target="_blank" rel="noopener">MIT CSAIL</a>. I am fortunate to receive the <a href="https://oge.mit.edu/fellowships/presidential-graduate-fellowship-program/" target="_blank" rel="noopener">MIT Presidential Fellowship</a>.</p>
 <p>I recently completed my B.S. in Computer Science with the highest honors in research at the University of Rochester. During my undergrad, I was a visiting student at MIT hosted by <a href="http://web.mit.edu/cocosci/josh.html" target="_blank" rel="noopener">Josh Tenenbaum</a>, working closely with <a href="http://people.csail.mit.edu/ganchuang/" target="_blank" rel="noopener">Chuang Gan</a>.</p>
-<p>I am interested in building inverse models that learn to caputure the rich and <em>structured representation</em> of our world from <em>unstructured observation</em>, through physical interactions of embodied agents. To this end, my research draws ideas from robotics, vision, graphics, and computational cognitive science.</p>
+<p>I am interested in building inverse models that learn to capture the rich and structured representation of the physical world from unstructured observation. To this end, my research draws ideas from vision, graphics, robotics, and computational cognitive science.</p>
 <hr>
 <p><strong>Email</strong>: <a href="mailto:sizheli@csail.mit.edu">sizheli@csail.mit.edu</a></p>
 
