--- a/publication/contact_points_discovery_iclr2022/index.html
+++ b/publication/contact_points_discovery_iclr2022/index.html
@@ -1078,7 +1078,7 @@ Nexplore, ONR MURI (N00014-13-1-0333), DARPA Machine Common Sense program, ONR (
       
     
     <li>
-      <a href="https://twitter.com/_lesterli" target="_blank" rel="noopener">
+      <a href="https://twitter.com/sizhe_lester_li" target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
     </li>
