--- a/publication/space_time_memory_bmvc2021/index.html
+++ b/publication/space_time_memory_bmvc2021/index.html
@@ -973,7 +973,7 @@ Supplementary notes can be added here, including [code, math, and images](https:
       
     
     <li>
-      <a href="https://twitter.com/_lesterli" target="_blank" rel="noopener">
+      <a href="https://twitter.com/sizhe_lester_li" target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
     </li>
