--- a/teaching/computer_vision_spring_2020/index.html
+++ b/teaching/computer_vision_spring_2020/index.html
@@ -823,7 +823,7 @@ Further event details, including [page elements](https://wowchemy.com/docs/writi
       
     
     <li>
-      <a href="https://twitter.com/_lesterli" target="_blank" rel="noopener">
+      <a href="https://twitter.com/sizhe_lester_li" target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
     </li>
