--- a/publication/dexdeform/index.html
+++ b/publication/dexdeform/index.html
@@ -941,7 +941,7 @@
       
     
     <li>
-      <a href="https://twitter.com/_lesterli" target="_blank" rel="noopener">
+      <a href="https://twitter.com/sizhe_lester_li" target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
     </li>
