--- a/publication/dexdeform/index.html
+++ b/publication/dexdeform/index.html
@@ -911,7 +911,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="https://sizhe-li.github.io/">Sizhe Lester Li</a></h5>
       <h6 class="card-subtitle">李思哲</h6>
-      <p class="card-text">I am interested in building inverse models that learn to caputure the rich and <em>structured representation</em> of our world from <em>unstructured observation</em>, through physical interactions of embodied agents. To this end, my research draws ideas from robotics, vision, graphics, and computational cognitive science.</p>
+      <p class="card-text">I am interested in building inverse models that learn to caputure the rich and <em>structured representation</em> of our world from <em>unstructured observation</em>, through physical interactions of embodied agents. To this end, my research draws ideas from vision, graphics, robotics, and computational cognitive science.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
