--- a/publication/index.html
+++ b/publication/index.html
@@ -717,7 +717,7 @@
   <span class="article-metadata li-cite-author">
     
 
-  <span class="author-highlighted" style="color:black">Sizhe Lester Li</span>, <span ><a href="https://davidcharatan.com">David Charatan</a></span>, <span ><a href="https://theialab.ca/">Andrea Tagliasacchi</a></span>, <span ><a href="https://www.vincentsitzmann.com/">Vincent Sitzmann</a></span>
+  <span ><a href="https://davidcharatan.com">David Charatan</a></span>, <span class="author-highlighted" style="color:black">Sizhe Lester Li</span>, <span ><a href="https://theialab.ca/">Andrea Tagliasacchi</a></span>, <span ><a href="https://www.vincentsitzmann.com/">Vincent Sitzmann</a></span>
   </span>
   (2023).
   <a href="/publication/pixel_splat/">pixelSplat: 3D Gaussian Splats from Image Pairs for Scalable Generalizable 3D Reconstruction</a>.
