--- a/index.html
+++ b/index.html
@@ -1069,7 +1069,7 @@
         <div>
           
 
-  <span class="author-highlighted" style="color:black">Sizhe Lester Li</span>, <span ><a href="https://davidcharatan.com">David Charatan</a></span>, <span ><a href="https://theialab.ca/">Andrea Tagliasacchi</a></span>, <span ><a href="https://www.vincentsitzmann.com/">Vincent Sitzmann</a></span>
+  <span ><a href="https://davidcharatan.com">David Charatan</a></span>, <span class="author-highlighted" style="color:black">Sizhe Lester Li</span>, <span ><a href="https://theialab.ca/">Andrea Tagliasacchi</a></span>, <span ><a href="https://www.vincentsitzmann.com/">Vincent Sitzmann</a></span>
         </div>
         
       </div>
