--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@
       </div>
 
       <div class="article-style">
-        CVPR, 2024
+        CVPR, 2024 <span style="color:#336BD0;font-weight:bold">(Oral)</span>
       </div>
 
       
