--- a/publication/pixel_splat/index.html
+++ b/publication/pixel_splat/index.html
@@ -850,7 +850,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">CVPR, 2024</div>
+          <div class="col-12 col-md-9">CVPR, 2024 <span style="color:#336BD0;font-weight:bold">(Oral)</span></div>
         </div>
       </div>
       <div class="col-md-1"></div>
