--- a/index.html
+++ b/index.html
@@ -1298,7 +1298,7 @@
       </div>
 
       <div class="article-style">
-        ICLR, 2022 <span style="color:#336BD0;font-weight:bold">(Spotlight, 5%)</span>
+        ICLR, 2022 <span style="color:#336BD0;font-weight:bold">(Spotlight)</span>
       </div>
 
       
