--- a/publication/contact_points_discovery_iclr2022/index.html
+++ b/publication/contact_points_discovery_iclr2022/index.html
@@ -869,7 +869,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">ICLR, 2022 <span style="color:#336BD0;font-weight:bold">(Spotlight, 5%)</span></div>
+          <div class="col-12 col-md-9">ICLR, 2022 <span style="color:#336BD0;font-weight:bold">(Spotlight)</span></div>
         </div>
       </div>
       <div class="col-md-1"></div>
