--- a/publication/index.html
+++ b/publication/index.html
@@ -863,7 +863,7 @@
   </span>
   (2022).
   <a href="/publication/contact_points_discovery_iclr2022/">Contact Points Discovery for Soft-Body Manipulations with Differentiable Physics</a>.
-  ICLR, 2022 <span style="color:#336BD0;font-weight:bold">(Spotlight, 5%)</span>.
+  ICLR, 2022 <span style="color:#336BD0;font-weight:bold">(Spotlight)</span>.
   
   <p>
 
