--- a/index.html
+++ b/index.html
@@ -1049,7 +1049,7 @@
       </div>
 
       <div class="article-style">
-        CVPR, 2024 <span style="color:#336BD0;font-weight:bold">(Oral)</span>
+        CVPR, 2024 <span style="color:#336BD0;font-weight:bold">(Oral, Best Paper Runner Up)</span>
       </div>
 
       
