--- a/publication/index.html
+++ b/publication/index.html
@@ -721,7 +721,7 @@
   </span>
   (2023).
   <a href="/publication/pixel_splat/">pixelSplat: 3D Gaussian Splats from Image Pairs for Scalable Generalizable 3D Reconstruction</a>.
-  CVPR, 2024 <span style="color:#336BD0;font-weight:bold">(Oral)</span>.
+  CVPR, 2024 <span style="color:#336BD0;font-weight:bold">(Oral, Best Paper Runner Up)</span>.
   
   <p>
 
