--- a/publication/index.html
+++ b/publication/index.html
@@ -745,6 +745,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/dcharatan/pixelsplat" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
