--- a/publication/pixel_splat/index.html
+++ b/publication/pixel_splat/index.html
@@ -787,6 +787,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header" href="https://github.com/dcharatan/pixelsplat" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
