--- a/index.html
+++ b/index.html
@@ -1099,6 +1099,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/dcharatan/pixelsplat" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
