--- a/publication/neural_jacobian_field/index.html
+++ b/publication/neural_jacobian_field/index.html
@@ -221,8 +221,8 @@
               <p>
                 Given the above dataset, our method learns a mapping from single
                 RGB image to a neural scene representation. The scene
-                representation is a combination of radiance field and jocobian
-                field - where the former contains visual and geometric
+                representation is a combination of Radiance Field and Jacobian
+                Field - where the former contains visual and geometric
                 information and the later contains the kinematics information of
                 the scene. We name this Neural Jacobian Field.
               </p>
